Bug 412210 - Elisa doesn't add anything to the music colection
Summary: Elisa doesn't add anything to the music colection
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.4.2
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-22 18:43 UTC by Lucia Mrenica
Modified: 2019-10-08 15:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lucia Mrenica 2019-09-22 18:43:56 UTC
When I start elisa I get:

<Unknown File>: QML QQuickLayoutAttached: Binding loop detected for property "preferredHeight"
org.kde.elisa.indexers.manager: Local file system indexer is inactive
org.kde.elisa.indexers.manager: Baloo indexer is unavailable
org.kde.elisa.indexers.manager: Baloo indexer is inactive
MediaPlayList::setPersistentState QMap(("currentTrack", QVariant(int, 0))("playList", QVariant(QVariantList, ()))("randomPlay", QVariant(bool, false))("repeatPlay", QVariant(bool, false)))
file:///usr/lib/qt/qml/org/kde/kirigami.2/templates/InlineMessage.qml:136: TypeError: Value is undefined and could not be converted to an object
org.kde.elisa.indexers.manager: Baloo indexer is available
org.kde.elisa.indexers.manager: Baloo indexer is active

... but nothing else happens. Elisa worked correctly in the past on this system. If I had to guess, it might have stopped working after either KF 5.62, Qt 5.13.1 or Plasma 5.16.90.
Comment 1 Chime 2019-09-26 07:46:48 UTC
Can confirm this bug.  It appears the local file indexer is non-functional.
Baloo indexer can be made to work with it by editing the baloo configuration file ~/.config/baloofilerc and including additional folders by adding a line like:

folders[$e]=/path/to/music/library/

Then restarting baloo and forcing it to scan with 

balooctl check
Comment 2 Matthieu Gallien 2019-09-30 11:38:54 UTC
See https://phabricator.kde.org/D24303 with a fix for that bug. Sorry for the delay.
Comment 3 Matthieu Gallien 2019-10-08 15:48:52 UTC
Git commit e535ef7ed125010d7832ed68112728688b92a24f by Matthieu Gallien.
Committed on 08/10/2019 at 15:47.
Pushed by mgallien into branch '0.4'.

ensure that baloo detection works

Summary:
connect to the signal used to detect baloo earlier such that we detect
it correctly at start

Thanks to Martin Steigerwald for the report on stable branch (but also reproducible on master)

CCMAIL: martin@lichtvoll.de

Test Plan:
if no elisa files exist (database, kconfig and Qt settings) baloo is detected and used to get audio files

without it, nothing happen at start

Reviewers: #elisa, astippich, ngraham, jguidon

Reviewed By: #elisa, ngraham

Subscribers: mthw

Differential Revision: https://phabricator.kde.org/D24303

M  +17   -0    autotests/mediaplaylisttest.cpp
M  +8    -1    src/abstractfile/abstractfilelisting.cpp
M  +1    -1    src/baloo/localbaloofilelisting.cpp
M  +4    -0    src/databaseinterface.cpp
M  +5    -0    src/file/localfilelisting.cpp
M  +16   -4    src/filescanner.cpp
M  +9    -17   src/musiclistenersmanager.cpp

https://commits.kde.org/elisa/e535ef7ed125010d7832ed68112728688b92a24f