ensure that baloo detection works

Summary:
connect to the signal used to detect baloo earlier such that we detect
it correctly at start

Thanks to Martin Steigerwald for the report on stable branch (but also reproducible on master)

CCMAIL: martin@lichtvoll.de

BUG: 412210

Test Plan:
if no elisa files exist (database, kconfig and Qt settings) baloo is detected and used to get audio files

without it, nothing happen at start

Reviewers: #elisa, astippich, ngraham, jguidon

Reviewed By: #elisa, ngraham

Subscribers: mthw

Differential Revision: https://phabricator.kde.org/D24303