src/abstractfile/abstractfilelisting.cpp
@@ -39,7 +39,6 @@
 #include <QSet>
 #include <QPair>
 #include <QAtomicInt>
-#include <QDebug>
 
 #include <QtGlobal>
 
@@ -248,6 +247,8 @@ void AbstractFileListing::scanDirectory(QList<MusicAudioTrack> &newFiles, const 
                 emitNewFiles(newFiles);
                 newFiles.clear();
             }
+        } else {
+            qCDebug(orgKdeElisaIndexer()) << "AbstractFileListing::scanDirectory" << newFilePath << "is not a valid track";
         }
 
         if (d->mStopRequest == 1) {
@@ -376,6 +377,8 @@ void AbstractFileListing::scanDirectoryTree(const QString &path)
 {
     auto newFiles = QList<MusicAudioTrack>();
 
+    qCDebug(orgKdeElisaIndexer()) << "AbstractFileListing::scanDirectoryTree" << path;
+
     scanDirectory(newFiles, QUrl::fromLocalFile(path));
 
     if (!newFiles.isEmpty() && d->mStopRequest == 0) {
@@ -463,6 +466,8 @@ void AbstractFileListing::checkFilesToRemove()
         allRemovedFiles.push_back(itFile.key());
     }
 
+    qCDebug(orgKdeElisaIndexer()) << "AbstractFileListing::checkFilesToRemove" << allRemovedFiles.size();
+
     if (!allRemovedFiles.isEmpty()) {
         setWaitEndTrackRemoval(true);
         Q_EMIT removedTracksList(allRemovedFiles);
@@ -484,6 +489,8 @@ bool AbstractFileListing::checkEmbeddedCoverImage(const QString &localFileName)
             return true;
         }
     }
+#else
+    Q_UNUSED(localFileName)
 #endif
 
     return false;
